# Rust-learning

./: .justfile  .pre-commit-config.yaml  Cargo.toml  README.md  about.html  about.toml  deny.toml  license.html  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml  check.yml  clippy.yml  commitlint.yml  coverage.yml  deny.yml  fmt.yml  miri.yml  outdated.yml  test.yml  udeps.yml
async/: Cargo.toml
async/base/: Cargo.toml
async/chapter01/: Cargo.toml
async/chapter01/src/: main.rs
async/chapter03/: Cargo.toml
async/chapter03/src/: main.rs
async/examples/: mini_redis_cli.rs
async/src/: main.rs
chapter/chapter02/: Cargo.toml
chapter/chapter02/src/: main.rs
chapter/chapter07/src/: lib.rs
chapter/chapter10/: Cargo.toml
chapter/chapter12/: Cargo.toml
chapter/chapter12/src/: lib.rs
chapter/chapter13/: Cargo.toml
chapter/chapter15/: Cargo.toml
chapter/chapter19/: Cargo.toml
chapter/chapter19/hello_macro_derive/: Cargo.toml
chapter/chapter20/: Cargo.toml
chapter/chapter20/src/: lib.rs  main.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/tests/: cli.rs
database/: Cargo.toml
database/src/: main.rs
rustlings/: CHANGELOG.md  CONTRIBUTING.md
rustlings/.github/workflows/: rust.yml
rustlings/exercises/: quiz1.rs  quiz2.rs  quiz3.rs
rustlings/exercises/clippy/: clippy2.rs  clippy3.rs
rustlings/exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs
rustlings/exercises/enums/: enums3.rs
rustlings/exercises/hashmaps/: hashmaps1.rs  hashmaps3.rs
rustlings/exercises/move_semantics/: move_semantics3.rs
rustlings/exercises/options/: options1.rs  options2.rs  options3.rs
rustlings/exercises/primitive_types/: primitive_types3.rs
rustlings/exercises/standard_library_types/: iterators4.rs  iterators5.rs
rustlings/exercises/strings/: strings3.rs  strings4.rs
rustlings/exercises/structs/: structs1.rs
rustlings/exercises/tests/: tests1.rs  tests2.rs
rustlings/exercises/vecs/: vecs2.rs
snippets/qr_code/src/: main.rs
tokio/: Cargo.toml
tokio/src/: frame.rs
trpl/appendix/: Cargo.toml
trpl/appendix_c/: Cargo.toml
trpl/appendix_c/src/: main.rs
trpl/chapter02/: Cargo.toml
trpl/chapter02/src/: main.rs
trpl/chapter03/: Cargo.toml
trpl/chapter04/: Cargo.toml
trpl/chapter05/: Cargo.toml
trpl/chapter06/: Cargo.toml
trpl/chapter07/: Cargo.toml
trpl/chapter07/src/: garden.rs  lib.rs  main.rs
trpl/chapter08/: Cargo.toml
trpl/chapter09/: Cargo.toml
trpl/chapter10/: Cargo.toml
trpl/chapter11/: Cargo.toml
trpl/chapter11/src/: lib.rs
trpl/chapter11/tests/: integration_test.rs  lib_test.rs
trpl/chapter11/tests/common/: mod.rs
trpl/chapter12/: Cargo.toml
trpl/chapter12/src/: lib.rs  main.rs
trpl/chapter13/: Cargo.toml
trpl/chapter14/: Cargo.toml
trpl/chapter14/src/: lib.rs
trpl/chapter15/: Cargo.toml
trpl/chapter16/: Cargo.toml
trpl/chapter17/: Cargo.toml
trpl/chapter18/: Cargo.toml
trpl/chapter19/: Cargo.toml
trpl/chapter19/hello_macro/: Cargo.toml
trpl/chapter19/hello_macro_derive/: Cargo.toml
trpl/chapter19/hello_macro_derive/src/: lib.rs
trpl/chapter20/: 404.html  Cargo.toml  hello.html
trpl/chapter20/hello_macro_derive/: Cargo.toml
trpl/chapter20/src/: 404.html  hello.html  lib.rs  main.rs
trpl/chapter21/: Cargo.toml
trpl/chapter21/src/: main.rs
