[package]
name = "cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# https://github.com/dtolnay/anyhow
anyhow = "1.0.66"
# https://github.com/clap-rs/clap
clap = { version = "4.0.26", features = ["derive"] }
# https://github.com/console-rs/indicatif
indicatif = "0.17.2"
# https://github.com/tokio-rs/tracing
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
