[package]
name = "cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Terakomari <im.terakomari@icloud.com>"]
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/you/grrs"
repository = "https://github.com/you/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
# https://github.com/dtolnay/anyhow
anyhow = "1.0.70"
# https://github.com/clap-rs/clap
clap = { version = "4.1.9", features = ["derive"] }
# https://github.com/rust-cli/confy
confy = "0.5.1"
# https://github.com/console-rs/indicatif
indicatif = "0.17.3"
# https://github.com/serde-rs/serde
serde = { version = "1.0.156", features = ["derive"] }
# https://github.com/tokio-rs/tracing
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["local-time"] }

[dev-dependencies]
# https://github.com/assert-rs/assert_cmd
assert_cmd = "2.0.10"
# https://github.com/assert-rs/predicates-rs
predicates = "3.0.1"
# https://github.com/assert-rs/assert_fs
assert_fs = "1.0.12"
