[package]
name = "database"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# https://github.com/dtolnay/anyhow
anyhow = "1.0.66"
# https://github.com/SeaQL/sea-orm
sea-orm = { version = "0.10.5", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
# https://github.com/tokio-rs/tokio
tokio = { version = "1.23.0", features = ["macros"] }
