[package]
name = "tokio_learning"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# https://github.com/tokio-rs/bytes
bytes = "1.4.0"
# https://github.com/crossbeam-rs/crossbeam
crossbeam = "0.8.2"
# https://github.com/xacrimon/dashmap
dashmap = "5.4.0"
# https://github.com/tokio-rs/mini-redis
mini-redis = "0.4.1"
# https://github.com/Amanieu/parking_lot
parking_lot = "0.12.1"
# https://github.com/SchrodingerZhu/snmalloc-rs
snmalloc-rs = "0.3.3"
# https://github.com/tokio-rs/tokio
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1.12"
# https://github.com/tokio-rs/tracing
# 用来生成 traces
tracing = "0.1.37"
# 用来将 traces 转发给外部监听器，如 STDOUT
# 在编写二进制程序而不是库时使用
tracing-subscriber = { version = "0.3.16", features = ["local-time"] }
